Add public API and Swagger docs
