# src/main/java/main/model/dto/ErrorDto.java
@@ -1,0 +1,11 @@
+package main.model.dto;
+
+import lombok.Data;
+
+@Data
+public class ErrorDto {
+    public ErrorDto (String message) {
+        setMessage(message);
+    }
+    private String message;
+}
